crates/math-core/src/snapshots/math_core__lexer__tests__assigment_with_space.snap
---
source: crates/math-core/src/lexer.rs
expression: x = 3.14
---
0:1: Letter("x", MathOrText)
1:2: Whitespace
2:3: MathOrTextMode(Relation(Rel { char: '=', cat: Default, has_vs1: false }), '=')
3:4: Whitespace
4:5: Digit('3')
5:6: Letter(".", MathOrText)
6:7: Digit('1')
7:8: Digit('4')
