crates/math-core/src/snapshots/math_core__lexer__tests__begin_array.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\begin{array}{c|c}"
---
0:13: Begin(Array)
13:14: GroupBegin
14:15: Letter("c", MathOrText)
15:16: MathOrTextMode(Ord(OrdLike { char: '|', cat: FGandForceDefault, has_vs1: false }), '|')
16:17: Letter("c", MathOrText)
17:18: GroupEnd
