crates/math-core/src/snapshots/math_core__lexer__tests__color.snap
---
source: crates/math-core/src/lexer.rs
expression: "{x\\color{red} y}"
---
0:1: GroupBegin
1:2: Letter("x", MathOrText)
2:8: CommandName("color")
8:9: GroupBegin
9:10: Letter("r", MathOrText)
10:11: Letter("e", MathOrText)
11:12: Letter("d", MathOrText)
12:13: GroupEnd
13:14: Whitespace
14:15: Letter("y", MathOrText)
15:16: GroupEnd
