crates/math-core/src/snapshots/math_core__lexer__tests__color_one_letter.snap
---
source: crates/math-core/src/lexer.rs
expression: "{x\\color r y}"
---
0:1: GroupBegin
1:2: Letter("x", MathOrText)
2:8: CommandName
9:10: Letter("r", MathOrText)
10:11: Whitespace
11:12: Letter("y", MathOrText)
12:13: GroupEnd
