crates/math-core/src/snapshots/math_core__lexer__tests__color_whitespace.snap
---
source: crates/math-core/src/lexer.rs
expression: "{x\\color     {red} y}"
---
0:1: GroupBegin
1:2: Letter("x", MathOrText)
2:8: CommandName
13:14: GroupBegin
14:15: Letter("r", MathOrText)
15:16: Letter("e", MathOrText)
16:17: Letter("d", MathOrText)
17:18: GroupEnd
18:19: Whitespace
19:20: Letter("y", MathOrText)
20:21: GroupEnd
