crates/math-core/src/snapshots/math_core__lexer__tests__comment.snap
---
source: crates/math-core/src/lexer.rs
expression: "ab%hello\ncd"
---
0:1: Letter("a", MathOrText)
1:2: Letter("b", MathOrText)
9:10: Letter("c", MathOrText)
10:11: Letter("d", MathOrText)
