crates/math-core/src/snapshots/math_core__lexer__tests__comment_after_whitespace_before_indented.snap
---
source: crates/math-core/src/lexer.rs
expression: "ab %hello\n  cd"
---
0:1: Letter("a", MathOrText)
1:2: Letter("b", MathOrText)
2:3: Whitespace
12:13: Letter("c", MathOrText)
13:14: Letter("d", MathOrText)
