crates/math-core/src/snapshots/math_core__lexer__tests__comment_before_indented_line.snap
---
source: crates/math-core/src/lexer.rs
expression: "ab%hello\n  cd"
---
0:1: Letter("a", MathOrText)
1:2: Letter("b", MathOrText)
11:12: Letter("c", MathOrText)
12:13: Letter("d", MathOrText)
