crates/math-core/src/snapshots/math_core__lexer__tests__custom_space.snap
---
source: crates/math-core/src/lexer.rs
expression: "{x\\hspace{2em}}"
---
0:1: GroupBegin
1:2: Letter("x", MathOrText)
2:9: CommandName
9:10: GroupBegin
10:11: Digit('2')
11:12: Letter("e", MathOrText)
12:13: Letter("m", MathOrText)
13:14: GroupEnd
14:15: GroupEnd
