crates/math-core/src/snapshots/math_core__lexer__tests__end_array.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\end{array}{c|c}"
---
0:11: End(Array)
11:12: GroupBegin
12:13: Letter("c", MathOrText)
13:14: MathOrTextMode(Ord(OrdLike { char: '|', cat: FGandForceDefault, has_vs1: false }), "|")
14:15: Letter("c", MathOrText)
15:16: GroupEnd
