crates/math-core/src/snapshots/math_core__lexer__tests__genfrac_with_one_sided_parens.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\genfrac{}]{0pt}{2}{a+b}{c+d}"
---
0:8: CommandName("genfrac")
8:9: GroupBegin
9:10: GroupEnd
10:11: SquareBracketClose
11:12: GroupBegin
12:13: Digit('0')
13:14: Letter("p", MathOrText)
14:15: Letter("t", MathOrText)
15:16: GroupEnd
16:17: GroupBegin
17:18: Digit('2')
18:19: GroupEnd
19:20: GroupBegin
20:21: Letter("a", MathOrText)
21:22: MathOrTextMode(BinaryOp(Bin { char: '+', cat: BD, has_vs1: false }), '+')
22:23: Letter("b", MathOrText)
23:24: GroupEnd
24:25: GroupBegin
25:26: Letter("c", MathOrText)
26:27: MathOrTextMode(BinaryOp(Bin { char: '+', cat: BD, has_vs1: false }), '+')
27:28: Letter("d", MathOrText)
28:29: GroupEnd
